--- a/static/index.html
+++ b/static/index.html
@@ -1,8 +1,14 @@
 <h1>rustadio in Rocket!</h1>
 
-<form action="/play" method="post" accept-charset="utf-8">
-	<label>Submit:
-		<input type="submit" value="play">
+<form action="/play/victory" method="post" accept-charset="utf-8">
+	<label>Victory:
+		<input type="submit" value="play_victory">
+	</label>
+	<br /><br />
+</form>
+<form action="/play/jiggly" method="post" accept-charset="utf-8">
+	<label>Victory:
+		<input type="submit" value="play_jiggly">
 	</label>
 	<br /><br />
 </form>
