Added everyone to license.

--- a/static/index.html
+++ b/static/index.html
@@ -1,12 +1,12 @@
 <h1>rustadio in Rocket!</h1>
 
-<form action="/play/victory" method="post" accept-charset="utf-8">
+<form action="/v" method="get" accept-charset="utf-8">
 	<label>Victory:
 		<input type="submit" value="play_victory">
 	</label>
 	<br /><br />
 </form>
-<form action="/play/jiggly" method="post" accept-charset="utf-8">
+<form action="/j" method="get" accept-charset="utf-8">
 	<label>Victory:
 		<input type="submit" value="play_jiggly">
 	</label>
