--- a/static/play.html
+++ b/static/play.html
@@ -1,4 +1,4 @@
 <h1>PLAY!</h1>
 <audio controls>
-	<source src = "victory.mp3" type="audio/mpeg">
+	<source src = "examples/victory.mp3" type="audio/mpeg">
 </audio>
