added generic album art

--- a/static/index.html
+++ b/static/index.html
@@ -51,9 +51,10 @@
 
 	
 			<div data-animate="fadeIn" class= "text-center" class="logo">
-                <i class="fa fa-music" align="middle" alt="self portrait" width="130"></i>
+                
+		<img src="img/blankAlbum.jpg" align="bottom" alt="Album art" width="500" height="500"/>
 			</div>
-
+<br><br>
 	<div size="24" data-animate="fadeInUp"> <strong>Song info</strong></div>
         <br>
 	<div class="btn-group mr-4" role="group" aria-label="Player">
